TEST_PROGRAMS/VALID/05/top_var_float_single_no_init_type.go
/* Types. */

package main
   
var b float64
   
func main() {
	//x = 1
}
