TEST_PROGRAMS/INVALID/04/61.go
package main

func main() {
    var x = 2

    //Illegal if
    if {
        x++
    }
    else
    {

    }
}
